<resources>
    <string name="app_name">Culfest \'20</string>
    <string name="web_client_id">17087072986-qm4agtj9d56o4d4hor6gtsn8ml7neqfq.apps.googleusercontent.com</string>

    <string name="title_activity_maps">Maps</string>

    <!-- whatsapp-->
    <!-- Content description for the sticker pack tray image -->
    <string name="tray_image_content_description">Sticker Pack Tray Image</string>
    <!-- the title of info button in the menu that takes the user to more information about that pack showing publisher website and so on -->
    <string name="more_info_button">More info about sticker pack</string>
    <!-- Text to be shown on the button that user can click to add the sticker pack to WhatsApp -->
    <string name="add_to_whatsapp">Add to WhatsApp</string>
    <!-- Content Description for the plus button shown on sticker pack list, that allows user to add sticker pack to WhatsApp -->
    <string name="add_button_content_description">Add sticker pack to WhatsApp</string>
    <!-- Title of the sticker pack list activity page in case the app contains multiple sticker packs, the singular string will be used when there is only one pack in the app -->
    <plurals name="title_activity_sticker_packs_list">
        <item quantity="one">Culfest \'20 Sticker Pack</item>
        <item quantity="other">Culfest \'20 Sticker Packs</item>
    </plurals>
    <!-- Title of the sticker pack page when there are multiple sticker packs in the app -->
    <string name="title_activity_sticker_pack_details_multiple_pack">Sticker details</string>
    <!-- Title of the sticker pack info page which displays the webpage, email and privacy policy of the sticker pack -->
    <string name="title_activity_sticker_pack_info">Info</string>
    <!-- Text of button that allows user to click to go to the webpage of the publisher -->
    <string name="view_webpage">View webpage</string>
    <!-- Text of button that allows user to click to send an email -->
    <string name="send_email">Send email</string>
    <!-- Text of button that allows user to click to go to the privacy policy website -->
    <string name="privacy_policy">Privacy policy</string>
    <!-- Text of button that allows user to click to go to the license agreement website -->
    <string name="license_agreement">License agreement</string>
    <!-- Text next to the tray icon that indicates the tray icon -->
    <string name="info_screen_tray_icon">Tray icon</string>
    <!-- Text shown to the user instead of Add to WhatsApp button if the pack is already added to WhatsApp -->
    <string name="details_pack_already_added">Sticker pack added to WhatsApp</string>
    <!-- Title in the intent chooser that shows when user has multiple email client installed -->
    <string name="info_send_email_to_prompt">Send email with</string>
    <!-- Message to show in a dialog when user fails to add sticker pack -->
    <string name="add_pack_fail_prompt_update_whatsapp">Sticker pack not added. If you\'d like to add it, make sure you update to the latest version of WhatsApp.</string>
    <!-- Text in dialog button when a user has an old version of WhatsApp that prevents them from adding the sticker pack, clicking on it will take user to play store -->
    <string name="add_pack_fail_prompt_update_play_link">Update</string>
    <!-- Toast text when we could not take user to play store because they don't have Google Play app installed -->
    <string name="cannot_find_play_store">Google Play is not installed on the device.</string>
    <string name="developer_image">Developer Image</string>
    <string name="developer_name">Developer Name</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_social_cause">A social cause has always been part of Culfest with an effort to do something for the society. Culfest \'20 proudly announces its social cause - \'Say No to Plastic Bags\', #StaySustainable. Team Culfest will put their effort in reducing single use plastics as they are non-biodegradable and toxic to nature. Hence, it is the time for us to realize the need of the hour, rise up and make this world a better place to live in.</string>
    <string name="about_culfest">Culfest is the annual cultural festival of NIT Jamshedpur. It is a three day fest consisting of plethora of events for the students to showcase their talents. Organized at national level, Culfest draws participants from institutes all over India.\nNIT Jamshedpur is an Institute of National Importance and is fully funded and governed by the Ministry of Human Resource Development (MHRD). </string>
    <string name="about_culfest_theme">Culfest \'20 will take us on a merry go round celebrating vivid cultures through its theme - \'Carousel de Culture\'. So, this festive extravaganza let us celebrate togetherness, memories, youth, infinity and a pattern that doesn\'t change. Let us celebrate cultures, let us celebrate CULFEST!</string>

    <string name="notification_icon">Notification_Icon</string>
    <string name="title">TITLE</string>
    <string name="description">description</string>
</resources>
