<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="@color/transparent"
    app:cardCornerRadius="2dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangular_border"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/faq_expand"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/notification_icon"
            android:src="@drawable/ic_faq_expand"
            android:tint="@color/black" />

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/faq_expand"
            android:text="@string/title"
            android:textColor="@color/primaryText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question"
            android:layout_marginStart="64dp"
            android:layout_marginTop="4dp"
            android:text="@string/description"
            android:textColor="@color/secondaryText"
            android:textSize="14sp"
            android:visibility="gone" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>

