<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="@color/transparent"
    app:cardCornerRadius="2dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangular_border"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/notification_icon"
            android:src="@drawable/ic_lightbulb_outline_black_24dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/expand_sign_down"
            android:layout_toEndOf="@+id/image_view"
            android:text="@string/title"
            android:textColor="@color/primaryText"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/expand_sign_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_expand_more_black_24dp"
            android:tint="@color/colorAccent"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/contract_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_expand_less_black_24dp"
            android:tint="@color/colorAccent"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginStart="64dp"
            android:layout_marginTop="4dp"
            android:text="@string/description"
            android:textColor="@color/secondaryText"
            android:textSize="14sp"
            android:visibility="gone" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>

